# wagit

./: .gitignore  .gitmodules  README.md
wagit/: CMakeLists.txt  main.cpp
wagit/headers/: FileSystem.h  FileSystemUtils.h  GitConfig.h  GitExceptions.h  GitObject.h  Repository.h  Utils.h  WAGit.h
wagit/includes/: ini.h
wagit/sources/: FileSystem.cpp  GitConfig.cpp  GitObject.cpp  Repository.cpp  WAGit.cpp
